--- a/Python/DataScience/pandas_code/Python Tutorial - Pandas.ipynb
+++ b/Python/DataScience/pandas_code/Python Tutorial - Pandas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +132,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(979, 6)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": true
@@ -247,6 +269,29 @@
    "source": [
     "# get last 5 rows\n",
     "movies.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['star_rating', 'title', 'content_rating', 'genre', 'duration',\n",
+       "       'actors_list'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get columns\n",
+    "movies.columns"
    ]
   },
   {
@@ -1358,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1437,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>363</th>\n",
+       "      <td>363</td>\n",
        "      <td>8.0</td>\n",
        "      <td>Three Colors: Blue</td>\n",
        "      <td>R</td>\n",
@@ -1401,7 +1446,7 @@
        "      <td>[u'Juliette Binoche', u'Zbigniew Zamachowski',...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>388</th>\n",
+       "      <td>388</td>\n",
        "      <td>8.0</td>\n",
        "      <td>The Blues Brothers</td>\n",
        "      <td>R</td>\n",
@@ -1410,7 +1455,7 @@
        "      <td>[u'John Belushi', u'Dan Aykroyd', u'Cab Callow...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>456</th>\n",
+       "      <td>456</td>\n",
        "      <td>7.9</td>\n",
        "      <td>Blue Is the Warmest Color</td>\n",
        "      <td>NC-17</td>\n",
@@ -1419,7 +1464,7 @@
        "      <td>[u'L\\xe9a Seydoux', u'Ad\\xe8le Exarchopoulos',...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>506</th>\n",
+       "      <td>506</td>\n",
        "      <td>7.8</td>\n",
        "      <td>Blue Velvet</td>\n",
        "      <td>R</td>\n",
@@ -1428,7 +1473,7 @@
        "      <td>[u'Isabella Rossellini', u'Kyle MacLachlan', u...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>684</th>\n",
+       "      <td>684</td>\n",
        "      <td>7.7</td>\n",
        "      <td>The Big Blue</td>\n",
        "      <td>PG-13</td>\n",
@@ -1437,7 +1482,7 @@
        "      <td>[u'Jean-Marc Barr', u'Jean Reno', u'Rosanna Ar...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>972</th>\n",
+       "      <td>972</td>\n",
        "      <td>7.4</td>\n",
        "      <td>Blue Valentine</td>\n",
        "      <td>NC-17</td>\n",
@@ -1467,7 +1512,7 @@
        "972  [u'Ryan Gosling', u'Michelle Williams', u'John...  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,6 +1520,85 @@
    "source": [
     "# find a movie title with a certain value\n",
     "movies[movies.title.str.contains(\"Blue\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>star_rating</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>The Godfather</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>Pulp Fiction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   star_rating                     title\n",
+       "0          9.3  The Shawshank Redemption\n",
+       "1          9.2             The Godfather\n",
+       "2          9.1    The Godfather: Part II\n",
+       "3          9.0           The Dark Knight\n",
+       "4          8.9              Pulp Fiction"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get specific columns\n",
+    "movies[['star_rating', 'title']].head()"
    ]
   },
   {
@@ -7401,7 +7525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
